[gd_scene load_steps=2 format=3 uid="uid://c6vumewgnfquy"]

[ext_resource type="Script" path="res://block_code/ui/block_canvas/block_canvas.gd" id="1_tk8h2"]

[node name="BlockCanvas" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_tk8h2")

[node name="Panel" type="Panel" parent="."]
layout_mode = 2
mouse_filter = 2

[node name="MouseOverride" type="MarginContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2

[node name="WindowContainer" type="Control" parent="."]
clip_contents = true
layout_mode = 2
mouse_filter = 2

[node name="Window" type="Control" parent="WindowContainer"]
unique_name_in_owner = true
layout_mode = 2
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 648.0
mouse_filter = 1

[node name="Overlay" type="Control" parent="WindowContainer"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1152.0
offset_top = -648.0
grow_horizontal = 0
grow_vertical = 0
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="WindowContainer/Overlay"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -40.0
grow_horizontal = 0
grow_vertical = 0
mouse_filter = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="ZoomButton" type="Button" parent="WindowContainer/Overlay/MarginContainer"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0.470588)
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 24

[node name="EmptyBox" type="VBoxContainer" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_vertical = 4

[node name="Label" type="Label" parent="EmptyBox"]
layout_mode = 2
text = "Select a node to create and edit block code."
horizontal_alignment = 1

[connection signal="pressed" from="WindowContainer/Overlay/MarginContainer/ZoomButton" to="." method="_on_zoom_button_pressed"]
